# meshconverter

./: CMakeLists.txt  README.md.txt  meshlib.sln
include/: Command.h  Definitions.h  Edge.h  Element.h  Face.h  FaceParameters.h  Mesh.h  MeshParameters.h  Point.h  Transformation.h  VertexParameters.h
include/converters/: convert.h
include/io/: AsciiStl.h  BinaryStl.h  Obj.h  obj_io.h
src/: main.cpp
